# protein-env

./: .env.example  .gitignore  Dockerfile  README.md  client.py  constants.py  inference.py  models.py  openenv.yaml  pyproject.toml  run_mocked.py  run_test.py
core/: __init__.py  esm2_embedder.py  reward_calculator.py  state_manager.py
data/: README.md
data/fixtures/: easy_proteins.json  hard_variants.json  medium_proteins.json
graders/: __init__.py  disease_grader.py  family_grader.py  go_grader.py
server/: Dockerfile  __init__.py  app.py  docker-compose.yml  protein_environment.py
server/static/: app.js  index.html  style.css
tasks/: __init__.py
tests/: __init__.py  conftest.py
tests/unit/: __init__.py  test_graders.py  test_models.py  test_reward.py  test_state_manager.py
