[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "protein-env"
version = "0.1.0"
requires-python = ">=3.11"
description = "OpenEnv environment for protein function prediction using ESM2"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=12.0",
    "pydantic>=2.7.0",
    "torch>=2.3.0",
    "transformers>=4.40.0",
    "huggingface-hub>=0.23.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.5.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "openai>=1.0.0",
    "openenv-core>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "pre-commit>=3.7.0",
]
# openenv-core is not yet on PyPI; install manually from source if needed
openenv = [
    "openenv-core>=0.2.1",
]

[project.scripts]
server = "server.app:main"

[tool.hatch.build.targets.wheel]
only-include = ["constants.py", "models.py", "core", "graders", "server", "tasks"]

[tool.hatch.build.targets.sdist]
include = ["constants.py", "models.py", "core/", "graders/", "server/", "tasks/", "tests/", "data/", "pyproject.toml", "README.md"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=. --cov-report=term-missing --cov-fail-under=80"

